fixed h2 alignment

--- a/New Folder/styles.css
+++ b/New Folder/styles.css
@@ -18,16 +18,6 @@ h1 a:link, a:visited {
   color: black;
 }
 
-h2 {
-  font-family: 'Droid Serif', serif;
-  font-size: 20px;
-  line-height: 90%;
-  color: black;
-  width: 100px;
-  position: absolute;
-  right: 40px;
-}
-
 body {
   background-size: cover;
   height: 100%;
@@ -35,6 +25,17 @@ body {
   font-weight: 700;
   font-size: 14px;
   color: black;
+}
+
+h2 {
+  font-family: 'Droid Serif', serif;
+  font-size: 20px;
+  line-height: 90%;
+  color: black;
+  width: 100px;
+  position: absolute;
+  right: 100px;
+  padding-left: 40px;
 }
 
 /* MENU BAR */
